# mcp-server-database

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/mcp_database/: __init__.py  executor.py  models.py  schema.py  server.py  validator.py
tests/: test_executor.py  test_models.py  test_schema.py  test_server.py  test_validator.py
